--- a/35 - Secrets - Starting Code/.env
+++ b/35 - Secrets - Starting Code/.env
@@ -1,2 +1,2 @@
-SECRET=Thisisourlittlesecret.
-API KEY=NXJABAJBJA
+CLIENT_ID=1007496004348-16lr1n693s21cee3rno8h72t18k5m8l3.apps.googleusercontent.com
+CLIENT_SECRET=S5-83QHYSBS37m_6z_iXUe1A
